# cmd-poetry

./: README.md  pyproject.toml
.github/workflows/: main.yml
cmd_line_app_pyinstaller/: main.py
